--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/mancha.png") top right;
+  background: url("mancha.png") top right;
   background-size: cover;
   position: relative;
 }
